# LLM101

./: .env  .gitignore  README.md  enrich_model.py  hello.py  llm.py  lol.py  output_df.txt  pd_df_agent.py  prompting.py  pyproject.toml  testing.py
course/: LLM101.ipynb  MDS_spraakmodeller_for_alle.ipynb  MDS_workshop_eline.ipynb  MSD_workshop.ipynb  solution_report.py  solution_summarize.py  spraakmodeller_for_alle.ipynb
course/old_notebooks/: LLM101_FINAL_2.ipynb  LLM101_FINAL_2_EF_30mai.ipynb  LLM101_vK_12mai.ipynb  LLM101_vK_19mai.ipynb
files/: IT_survey.csv  link.txt  output_df.csv  random_out.csv
ignore_this/: shuffled_df_LLM101.xlsx
llm101.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: LLM101.ipynb  LLM101_FINAL.ipynb  LLM101_FINAL_2.ipynb  LLM101_FINAL_2_EF_30mai.ipynb  LLM101_v1.ipynb  LLM101_v2.ipynb  LLM101_vE_12mai.ipynb  LLM101_vE_26mai.ipynb  LLM101_vK_12mai.html  LLM101_vK_12mai.ipynb  LLM101_vK_19mai.ipynb  LLM101_vK_26mai.ipynb  LLM101_vK_28mai.ipynb
notebooks/old_notebooks/: LLM101_vK.ipynb  LLM101_vK_26mai.ipynb
prompt_engineering/: cat.txt  prompt_1.txt  prompt_3.txt  prompting_vol1.py  prompting_vol2.py  prompting_vol3.py
prompting/: llm_call_task3.py  llm_calling.py  llm_enrich_data.py  make_data.py
res_model/: bound_categorization.py  categorization.py  reasoning.py  search_cat.py  sentiment.py
structured_output/: test_struct.py
utils/: categorize_1.py  dataset_c.py  llm.py  shuffled_df_LLM101_filtered.csv
