[project]
name = "llm101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "kagglehub[pandas-datasets]>=0.3.8",
    "langchain>=0.3.19",
    "langchain-core>=0.3.35",
    "langchain-openai>=0.3.6",
    "langfuse>=2.59.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
    "utils>=1.0.2",
    "langchain-experimental>=0.3.4",
    "tabulate>=0.9.0",
    "langchain-anthropic>=0.3.9",
    "langchain-community>=0.3.19",
    "scikit-learn>=1.6.1",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
